overflow fixes

--- a/css/less/crop-home.less
+++ b/css/less/crop-home.less
@@ -9,6 +9,7 @@ body.crop-index {
 
 	.about-section {
 		position: relative;
+		overflow: hidden;
 		.about-text {
 			margin-top: 30px;
 			p {
